fix: revert TenantContext to InheritableThreadLocal (ScopedValue is Java 21 preview only); CVE-007 LinkedIn token AES-256-GCM encryption; P2-4 MariaDB binlog; KC-01 healthcheck cascade fix